--- a/osd/panprint.kv
+++ b/osd/panprint.kv
@@ -1,4 +1,8 @@
 #:kivy 1.10.0
+#:import ImagedToolButton osd.button.ImagedToolButton
+#:import ImagedButton osd.button.ImagedButton
+#:import ColoredButton osd.button.ColoredButton
+#:import DrawSpace osd.drawing.DrawSpace
 
 <DrawingScreen>:
     BoxLayout:
