--- a/osd/panprint.kv
+++ b/osd/panprint.kv
@@ -8,6 +8,8 @@
 #:import minDrawWidth const.minDrawWidth
 #:import maxDrawWidth const.maxDrawWidth
 #:import initialWidth const.initialWidth
+#
+#:import colors const.colors
 
 <DrawingScreen>:
     BoxLayout:
@@ -59,11 +61,11 @@
             BoxLayout:
                 orientation: 'horizontal'
                 ColoredButton:
-                    color: 0
+                    color: colors[0]
                 ColoredButton:
-                    color: 1
+                    color: colors[1]
                 ColoredButton:
-                    color: 2
+                    color: colors[2]
                     state: 'down'
             Slider:
                 id: slider
@@ -107,7 +109,7 @@
 <ColoredButton>:
     background_normal: 'resources/button.png'
     background_down: 'resources/button-color-down.png'
-    background_color: self.getColor()
+    background_color: self.color
     on_release: self.click()
     group: 'color'
     allow_no_selection: False
