--- a/osd/panprint.kv
+++ b/osd/panprint.kv
@@ -1,12 +1,12 @@
 #:kivy 1.10.0
-#:import ImagedToolButton osd.uibuttons.ImagedToolButton
-#:import ImagedButton osd.uibuttons.ImagedButton
-#:import ColoredButton osd.uibuttons.ColoredButton
+#:import ImagedToolButton uibuttons.ImagedToolButton
+#:import ImagedButton uibuttons.ImagedButton
+#:import ColoredButton uibuttons.ColoredButton
 #
-#:import DrawSpace osd.drawspace.DrawSpace
+#:import DrawSpace drawspace.DrawSpace
 #
-#:import minDrawWidth osd.const.minDrawWidth
-#:import maxDrawWidth osd.const.maxDrawWidth
+#:import minDrawWidth const.minDrawWidth
+#:import maxDrawWidth const.maxDrawWidth
 
 <DrawingScreen>:
     BoxLayout:
@@ -149,4 +149,3 @@
             MenuButton:
                 icon: 'resources/web.png'
                 screen: 'web'
-
