--- a/osd/panprint.kv
+++ b/osd/panprint.kv
@@ -150,7 +150,7 @@
                 screen: 'drawing'
             MenuButton:
                 icon: 'resources/photo.png'
-                screen: 'photo'
+                screen: 'drawing'
             MenuButton:
                 icon: 'resources/web.png'
-                screen: 'web'
+                screen: 'drawing'
